--- a/Laboratorio 2 - 14001764.ipynb
+++ b/Laboratorio 2 - 14001764.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "aa5277c2-c3f0-4672-8a1c-7721a3b97a3e",
    "metadata": {
     "tags": []
@@ -47,14 +47,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Ingrese segundos: 5871\n"
+      "Ingrese segundos: 3780\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Horas: 1, Minutos: 37, Segundos: 51\n"
+      "Horas: 1, Minutos: 3, Segundos: 0\n"
      ]
     }
    ],
@@ -83,8 +83,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "22aa18bf-1d4e-4ecd-9435-9db81611f29b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese número: 4\n",
+      "Ingrese símbolo: *\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*    ****    ****    *\n",
+      "**    ***    ***    **\n",
+      "***    **    **    ***\n",
+      "****    *    *    ****\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    numero = int(input(\"Ingrese número:\"))\n",
+    "    simbolo = input(\"Ingrese símbolo:\")\n",
+    "except:\n",
+    "    print(\"Error: Input inválido\")\n",
+    "    \n",
+    "if(numero<1 or numero>20) :\n",
+    "    print(\"Error: El número debe estar entre 1 y 20.\")\n",
+    "elif(len(simbolo) != 1):\n",
+    "    print(\"Error: Debe ingresar un unico carácter.\")\n",
+    "else:\n",
+    "    for i in range(1,numero+1):\n",
+    "        print(simbolo*i + ' '*numero + simbolo*(numero+1-i) + \" \"*numero + simbolo*(numero+1-i) + \" \"*numero + simbolo*i)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2db3b180-cc8b-492a-90f9-19dbfeeb3bb2",
+   "id": "50654683-160d-4fc8-a466-d5493f2f8789",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f3cb7c0-1d2a-41f0-b659-a97d17d7c40a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f11b0010-01be-4a51-b99b-4d65e3de7565",
    "metadata": {},
    "outputs": [],
    "source": []
