--- a/Laboratorio 2 - 14001764.ipynb
+++ b/Laboratorio 2 - 14001764.ipynb
@@ -126,20 +126,85 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50654683-160d-4fc8-a466-d5493f2f8789",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "3e2d82ec-d984-457e-8af0-6c1c408e0b4e",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Ejercicio 3"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "0f3cb7c0-1d2a-41f0-b659-a97d17d7c40a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingrese su fecha de nacimiento\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Día: 2\n",
+      "Mes: 12\n",
+      "Año: 1997\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Edad: 26 años, 3 meses y 1 días.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "print(\"Ingrese su fecha de nacimiento\")\n",
+    "validDate = False\n",
+    "try:\n",
+    "    bDay = int(input(\"Día:\"))\n",
+    "    bMonth = int(input(\"Mes:\"))\n",
+    "    bYear = int(input(\"Año:\"))\n",
+    "    \n",
+    "    if(bYear > datetime.now().year):\n",
+    "        print(\"Error: Año inválido\")\n",
+    "    elif(bMonth < 1 or bMonth > 12):\n",
+    "        print(\"Error: Año inválido\")\n",
+    "    elif(bDay <1 or bDay > 31):  \n",
+    "        print(\"Error: Día inválido\")\n",
+    "    else:\n",
+    "        validDate = True\n",
+    "except:\n",
+    "    print(\"Error: Input inválido\") \n",
+    "\n",
+    "\n",
+    "if(validDate):\n",
+    "    birthday = datetime(bYear,bMonth,bDay)\n",
+    "    today = datetime.now()\n",
+    "\n",
+    "    days = (today-birthday).days\n",
+    "\n",
+    "    years = days // 365\n",
+    "    days = days % 365\n",
+    "\n",
+    "    months = days // 31\n",
+    "    days = days % 31\n",
+    "\n",
+    "    print(f\"Edad: {years} años, {months} meses y {days} días.\")\n",
+    "else: \n",
+    "    print(\"No ingreso una fecha válida\")"
+   ]
   },
   {
    "cell_type": "code",
