--- a/Laboratorio 2 - 14001764.ipynb
+++ b/Laboratorio 2 - 14001764.ipynb
@@ -29,6 +29,7 @@
    "cell_type": "markdown",
    "id": "ec6ce4aa-f13a-4bad-a62a-9f65b987a8cc",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -76,14 +77,17 @@
   {
    "cell_type": "markdown",
    "id": "0d6c66ec-4d9e-4689-97c6-9b911c85d60e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Ejercicio 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 85,
    "id": "22aa18bf-1d4e-4ecd-9435-9db81611f29b",
    "metadata": {
     "tags": []
@@ -93,7 +97,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Ingrese número: 4\n",
+      "Ingrese número: 5\n",
       "Ingrese símbolo: *\n"
      ]
     },
@@ -101,34 +105,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "*    ****    ****    *\n",
-      "**    ***    ***    **\n",
-      "***    **    **    ***\n",
-      "****    *    *    ****\n"
+      "*     *****     *****     *\n",
+      "**     ****     ****     **\n",
+      "***     ***     ***     ***\n",
+      "****     **     **     ****\n",
+      "*****     *     *     *****\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "\n",
+    "# FUNCION\n",
+    "def patrones(numero, simbolo):\n",
+    "    if(numero<1 or numero>20) :\n",
+    "        print(\"Error: El número debe estar entre 1 y 20.\")\n",
+    "    elif(len(simbolo) != 1):\n",
+    "        print(\"Error: Debe ingresar un unico carácter.\")\n",
+    "    else:\n",
+    "        for i in range(1,numero+1):\n",
+    "            print(simbolo*i + ' '*numero + simbolo*(numero+1-i) + \" \"*numero + simbolo*(numero+1-i) + \" \"*numero + simbolo*i)\n",
+    "     \n",
+    "    \n",
+    "# LLAMADA EJEMPLO\n",
     "try:\n",
     "    numero = int(input(\"Ingrese número:\"))\n",
     "    simbolo = input(\"Ingrese símbolo:\")\n",
     "except:\n",
     "    print(\"Error: Input inválido\")\n",
-    "    \n",
-    "if(numero<1 or numero>20) :\n",
-    "    print(\"Error: El número debe estar entre 1 y 20.\")\n",
-    "elif(len(simbolo) != 1):\n",
-    "    print(\"Error: Debe ingresar un unico carácter.\")\n",
-    "else:\n",
-    "    for i in range(1,numero+1):\n",
-    "        print(simbolo*i + ' '*numero + simbolo*(numero+1-i) + \" \"*numero + simbolo*(numero+1-i) + \" \"*numero + simbolo*i)\n",
-    "        "
+    "        \n",
+    "patrones(numero, simbolo)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "3e2d82ec-d984-457e-8af0-6c1c408e0b4e",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -207,9 +220,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc0c3634-9e4e-4e2c-b98a-a7d96b436c22",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "f3f24793-9f86-4b79-85a0-8f173be66f56",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102040570\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def tuplaToString(tupla):\n",
+    "    lista = [str(value) for value in list(tupla)]\n",
+    "    return (''.join(lista))\n",
+    "    \n",
+    "ejemplo = (10,20,40,5,70)\n",
+    "print(tuplaToString(ejemplo))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f11b0010-01be-4a51-b99b-4d65e3de7565",
+   "id": "ce6b74a0-4922-4fb5-a1ed-af77034a6180",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0bc92a5-48eb-47d4-983d-6b0aaeb964f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "359fae9b-93de-4324-92c0-8bd3ac5d09d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1eef4bf0-9383-4514-8275-6e12b9df3298",
    "metadata": {},
    "outputs": [],
    "source": []
