Ejercicio 5, arreglar ejercicio 2

--- a/Laboratorio 2 - 14001764.ipynb
+++ b/Laboratorio 2 - 14001764.ipynb
@@ -222,14 +222,16 @@
   {
    "cell_type": "markdown",
    "id": "fc0c3634-9e4e-4e2c-b98a-a7d96b436c22",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Ejercicio 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "id": "f3f24793-9f86-4b79-85a0-8f173be66f56",
    "metadata": {
     "tags": []
@@ -245,18 +247,57 @@
    ],
    "source": [
     "\n",
+    "# FUNCION\n",
     "def tuplaToString(tupla):\n",
     "    lista = [str(value) for value in list(tupla)]\n",
     "    return (''.join(lista))\n",
     "    \n",
+    "# LLAMADA EJEMPLO\n",
     "ejemplo = (10,20,40,5,70)\n",
     "print(tuplaToString(ejemplo))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0cd3ce46-89cb-4189-8e85-76699cc95b9a",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Ejercicio 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c0bc92a5-48eb-47d4-983d-6b0aaeb964f1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('X',), ('a', 'b'), ('a', 'b', 'c'), 'd']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# FUNCION\n",
+    "def deleteEmptyTuples(array):\n",
+    "    lista = [value for value in array if len(value) > 0]\n",
+    "    return lista\n",
+    "    \n",
+    "# LLAMADA EJEMPLO\n",
+    "ejemplo = [(),(),('X',), ('a','b'),('a', 'b', 'c'), ('d')]\n",
+    "print(deleteEmptyTuples(ejemplo))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce6b74a0-4922-4fb5-a1ed-af77034a6180",
+   "id": "fe271737-65ec-4ccd-a8b2-329b69f153bc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -264,7 +305,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0bc92a5-48eb-47d4-983d-6b0aaeb964f1",
+   "id": "5e6a75cd-4190-4e9a-9a52-f2e8f546ea87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb89b7c5-94d2-4c16-941d-ce46a870cd4f",
    "metadata": {},
    "outputs": [],
    "source": []
