Cambio en ejercicio 5

--- a/Laboratorio 2 - 14001764.ipynb
+++ b/Laboratorio 2 - 14001764.ipynb
@@ -223,6 +223,7 @@
    "cell_type": "markdown",
    "id": "fc0c3634-9e4e-4e2c-b98a-a7d96b436c22",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "c0bc92a5-48eb-47d4-983d-6b0aaeb964f1",
    "metadata": {
     "tags": []
@@ -286,7 +287,10 @@
    "source": [
     "# FUNCION\n",
     "def deleteEmptyTuples(array):\n",
+    "    # Quitamos tuplas vacias\n",
     "    lista = [value for value in array if len(value) > 0]\n",
+    "    # Quitamos parentesis (solo de los que no son tuplas)\n",
+    "    lista = list(map(lambda value: value[0] if (len(value) == 1 and not isinstance(value,tuple)) else value, lista))\n",
     "    return lista\n",
     "    \n",
     "# LLAMADA EJEMPLO\n",
@@ -295,12 +299,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe271737-65ec-4ccd-a8b2-329b69f153bc",
+   "cell_type": "markdown",
+   "id": "9cb2bc86-1e62-41c9-97d5-d4d2158f988c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Ejercicio 6"
+   ]
   },
   {
    "cell_type": "code",
