--- a/Laboratorio 2 - 14001764.ipynb
+++ b/Laboratorio 2 - 14001764.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "c0bc92a5-48eb-47d4-983d-6b0aaeb964f1",
    "metadata": {
     "tags": []
@@ -308,19 +308,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "5e6a75cd-4190-4e9a-9a52-f2e8f546ea87",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb89b7c5-94d2-4c16-941d-ce46a870cd4f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10.5, 44.0, 58.0)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# FUNCION\n",
+    "def sumaTuplas(tupla):\n",
+    "    lista = np.array(tupla)\n",
+    "    lista = [value.mean() for value in lista]\n",
+    "    return tuple(lista)\n",
+    "    \n",
+    "# LLAMADA EJEMPLO\n",
+    "ejemplo = ((10, 10, 10, 12), (30, 45, 56, 45), (81, 80, 39, 32))\n",
+    "sumaTuplas(ejemplo)"
+   ]
   },
   {
    "cell_type": "code",
