--- a/Laboratorio 2 - 14001764.ipynb
+++ b/Laboratorio 2 - 14001764.ipynb
@@ -262,6 +262,7 @@
    "cell_type": "markdown",
    "id": "0cd3ce46-89cb-4189-8e85-76699cc95b9a",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -301,7 +302,10 @@
   {
    "cell_type": "markdown",
    "id": "9cb2bc86-1e62-41c9-97d5-d4d2158f988c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Ejercicio 6"
    ]
@@ -340,9 +344,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abdb9436-5551-4ad2-bbb5-53555c193385",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Ejercicio 7"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "359fae9b-93de-4324-92c0-8bd3ac5d09d0",
+   "id": "1eef4bf0-9383-4514-8275-6e12b9df3298",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "# En este ejemplo existen las opciones 1 y 2:\n",
+    "#    1. Seguir\n",
+    "#    2. Terminar\n",
+    "\n",
+    "print(\"---------------------------------\")\n",
+    "print(\"Escoja una opción:\")\n",
+    "print(\"\\t1. Añadir nueva factura\")\n",
+    "print(\"\\t2. Pagar factura\")\n",
+    "print(\"\\t3. Terminar\")\n",
+    "\n",
+    "opcion = 1\n",
+    "facturas = {}\n",
+    "total = 0;\n",
+    "pagado = 0;\n",
+    "\n",
+    "while opcion != 3:\n",
+    "    try:\n",
+    "        print(\"---------------------------------\")\n",
+    "        opcion = int(input(\"Ingrese una opcion:\"))\n",
+    "        \n",
+    "        if(opcion != 1 and opcion != 2 and opcion != 3):\n",
+    "            print(\"ERROR: Opción inválida.\")\n",
+    "            \n",
+    "        # Agregar factura\n",
+    "        elif(opcion == 1):\n",
+    "            try:\n",
+    "                numFactura = int(input(\"Número de factura:\"))\n",
+    "                costoFactura = float(input(\"Costo:\"))\n",
+    "                print(\"\\n\")\n",
+    "                \n",
+    "                if(numFactura >= 1000 and numFactura <= 9999 and costoFactura >= 0):\n",
+    "                    facturas[numFactura] = costoFactura\n",
+    "                    total += costoFactura\n",
+    "                    \n",
+    "                    print(\"\\nFACTURAS:\")\n",
+    "                    print(facturas)\n",
+    "                else:\n",
+    "                    print(\"ERROR: Número inválido.\")\n",
+    "            except: \n",
+    "                print(\"ERROR: Número inválido.\")\n",
+    "                \n",
+    "            print(\"\\n\")\n",
+    "            print(f\"Cobrado hasta el momento: {pagado}\")\n",
+    "            print(f\"Pendiente de cobro: {total}\")\n",
+    "            print(\"\\n\")\n",
+    "        # Pagar factura\n",
+    "        elif (opcion == 2):\n",
+    "            try:\n",
+    "                numFactura = int(input(\"Número de factura:\"))\n",
+    "                print(\"\\n\")\n",
+    "                    \n",
+    "                if(numFactura >= 1000 and numFactura <= 9999 and numFactura in facturas):\n",
+    "                    pagado += facturas[numFactura]\n",
+    "                    total -= facturas[numFactura]\n",
+    "                    \n",
+    "                    del facturas[numFactura]\n",
+    "                    \n",
+    "                    print(\"\\nFACTURAS:\")\n",
+    "                    print(facturas)\n",
+    "                    \n",
+    "                else:\n",
+    "                    print(\"ERROR: Número inválido.\")\n",
+    "            except: \n",
+    "                print(\"ERROR: Número inválido.\")\n",
+    "                \n",
+    "            print(\"\\n\")\n",
+    "            print(f\"Cobrado hasta el momento: {pagado}\")\n",
+    "            print(f\"Pendiente de cobro: {total}\")\n",
+    "            print(\"\\n\")\n",
+    "    except:\n",
+    "        print(\"ERROR: Opción inválida.\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ccb66be-804d-46b9-9d7f-c9ce4a3648d6",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a26c9c5d-6fe7-484a-9bb5-a647af321213",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -350,7 +457,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eef4bf0-9383-4514-8275-6e12b9df3298",
+   "id": "93df8c70-eecf-4b7c-8ac9-b74d5346e34e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "592f45df-0328-402d-b556-e771c338b9d3",
    "metadata": {},
    "outputs": [],
    "source": []
