--- a/Laboratorio 2 - 14001764.ipynb
+++ b/Laboratorio 2 - 14001764.ipynb
@@ -364,9 +364,10 @@
    "outputs": [],
    "source": [
     "\n",
-    "# En este ejemplo existen las opciones 1 y 2:\n",
-    "#    1. Seguir\n",
-    "#    2. Terminar\n",
+    "# En este ejemplo existen las opciones 1, 2 y 3:\n",
+    "#    1. Agregar nueva factura\n",
+    "#    2. Pagar factura\n",
+    "#    3. Terminar\n",
     "\n",
     "print(\"---------------------------------\")\n",
     "print(\"Escoja una opción:\")\n",
@@ -448,24 +449,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "a26c9c5d-6fe7-484a-9bb5-a647af321213",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T01', 'T02', 'T03', 'T04', 'T05', 'T06', 'T07', 'T08', 'T09', 'T10', 'T11', 'T12', 'T13', 'C01', 'C02', 'C03', 'C04', 'C05', 'C06', 'C07', 'C08', 'C09', 'C10', 'C11', 'C12', 'C13', 'P01', 'P02', 'P03', 'P04', 'P05', 'P06', 'P07', 'P08', 'P09', 'P10', 'P11', 'P12', 'P13', 'E01', 'E02', 'E03', 'E04', 'E05', 'E06', 'E07', 'E08', 'E09', 'E10', 'E11', 'E12', 'E13']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def crearBarajaPoker():\n",
+    "    baraja = [['T','C','P','E'][value//13]+str(value%13+1).zfill(2) for value in range(0,52)]\n",
+    "    return baraja\n",
+    "\n",
+    "print(crearBarajaPoker())\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93df8c70-eecf-4b7c-8ac9-b74d5346e34e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "592f45df-0328-402d-b556-e771c338b9d3",
+   "id": "6de3c83d-9feb-46db-b789-064c2cd8c2bf",
    "metadata": {},
    "outputs": [],
    "source": []
