--- a/Laboratorio 2 - 14001764.ipynb
+++ b/Laboratorio 2 - 14001764.ipynb
@@ -444,12 +444,13 @@
    "id": "0ccb66be-804d-46b9-9d7f-c9ce4a3648d6",
    "metadata": {},
    "source": [
+    "\n",
     "## Ejercicio 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 42,
    "id": "a26c9c5d-6fe7-484a-9bb5-a647af321213",
    "metadata": {
     "tags": []
@@ -459,17 +460,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['T01', 'T02', 'T03', 'T04', 'T05', 'T06', 'T07', 'T08', 'T09', 'T10', 'T11', 'T12', 'T13', 'C01', 'C02', 'C03', 'C04', 'C05', 'C06', 'C07', 'C08', 'C09', 'C10', 'C11', 'C12', 'C13', 'P01', 'P02', 'P03', 'P04', 'P05', 'P06', 'P07', 'P08', 'P09', 'P10', 'P11', 'P12', 'P13', 'E01', 'E02', 'E03', 'E04', 'E05', 'E06', 'E07', 'E08', 'E09', 'E10', 'E11', 'E12', 'E13']\n"
+      "P(A ∩ B) = 0.2692307692307692\n",
+      "P(A)P(B) = 0.27884615384615385\n",
+      "Por lo tanto, no son eventos independientes\n",
+      "\n",
+      "P(A ∪ B) = 0.7884615384615384\n",
+      "P(A) + P(B) = 0.7884615384615385\n",
+      "Por lo tanto, no se cumple la regla de la adición\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "import random\n",
     "\n",
+    "# FUNCION QUE CREA BARAJA\n",
     "def crearBarajaPoker():\n",
     "    baraja = [['T','C','P','E'][value//13]+str(value%13+1).zfill(2) for value in range(0,52)]\n",
     "    return baraja\n",
     "\n",
-    "print(crearBarajaPoker())\n"
+    "\n",
+    "# FUNCION QUE CREA UN SET (MANO) DE POKER\n",
+    "def crearManoPoker(baraja):\n",
+    "    len1 = random.randint(1,len(baraja))\n",
+    "    len2 = random.randint(1,len(baraja))\n",
+    "    \n",
+    "    set1 = set(random.sample(baraja, len1))\n",
+    "    set2 = set(random.sample(baraja, len2))\n",
+    "    \n",
+    "    return set1, set2\n",
+    "\n",
+    "\n",
+    "# FUNCION PROBABILIDAD DE INTERSECCION\n",
+    "# def probabilidadInterseccion(set1, set2):\n",
+    "    # interseccion = set1.insersection(set2)\n",
+    "    # prob = len(interseccion)/min()\n",
+    "\n",
+    "\n",
+    "# LLAMADA A FUNCION PARA CREAR BARAJA\n",
+    "baraja = crearBarajaPoker()\n",
+    "\n",
+    "# LLAMADA PARA CREAR SETS(MANOS) DE POKER\n",
+    "A, B = crearManoPoker(baraja)\n",
+    "\n",
+    "\n",
+    "# CALCULO DE PROBABILIDADES\n",
+    "probA = len(A)/len(baraja)\n",
+    "probB = len(B)/len(baraja)\n",
+    "\n",
+    "# Interseccion\n",
+    "interseccion = list(A.intersection(B))\n",
+    "\n",
+    "probInterseccion = len(interseccion)/len(baraja)\n",
+    "probIndependientes = probA * probB\n",
+    "independientes = 'son' if probInterseccion == probIndependientes else 'no son'\n",
+    "\n",
+    "print(f\"P(A ∩ B) = {probInterseccion}\")\n",
+    "print(f\"P(A)P(B) = {probIndependientes}\")\n",
+    "print(f\"Por lo tanto, {independientes} eventos independientes\\n\")\n",
+    "\n",
+    "# Union \n",
+    "union = list(A.union(B))\n",
+    "probUnion = len(union)/len(baraja)\n",
+    "adicion = probA + probB - probInterseccion\n",
+    "reglaAdicion = 'si' if probUnion == adicion else 'no'\n",
+    "\n",
+    "print(f\"P(A ∪ B) = {probUnion}\")\n",
+    "print(f\"P(A) + P(B) = {adicion}\")\n",
+    "print(f\"Por lo tanto, {reglaAdicion} se cumple la regla de la adición\\n\")\n",
+    "\n"
    ]
   },
   {
