Ejercicio 8. Round para mejor resultado

--- a/Laboratorio 2 - 14001764.ipynb
+++ b/Laboratorio 2 - 14001764.ipynb
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "id": "a26c9c5d-6fe7-484a-9bb5-a647af321213",
    "metadata": {
     "tags": []
@@ -460,13 +460,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P(A ∩ B) = 0.2692307692307692\n",
-      "P(A)P(B) = 0.27884615384615385\n",
+      "P(A ∩ B) = 0.44\n",
+      "P(A)P(B) = 0.37\n",
       "Por lo tanto, no son eventos independientes\n",
       "\n",
-      "P(A ∪ B) = 0.7884615384615384\n",
-      "P(A) + P(B) = 0.7884615384615385\n",
-      "Por lo tanto, no se cumple la regla de la adición\n",
+      "P(A ∪ B) = 0.77\n",
+      "P(A) + P(B) = 0.77\n",
+      "Por lo tanto, si se cumple la regla de la adición\n",
       "\n"
      ]
     }
@@ -511,8 +511,8 @@
     "# Interseccion\n",
     "interseccion = list(A.intersection(B))\n",
     "\n",
-    "probInterseccion = len(interseccion)/len(baraja)\n",
-    "probIndependientes = probA * probB\n",
+    "probInterseccion = round(len(interseccion)/len(baraja),2)\n",
+    "probIndependientes = round(probA * probB,2)\n",
     "independientes = 'son' if probInterseccion == probIndependientes else 'no son'\n",
     "\n",
     "print(f\"P(A ∩ B) = {probInterseccion}\")\n",
@@ -521,8 +521,8 @@
     "\n",
     "# Union \n",
     "union = list(A.union(B))\n",
-    "probUnion = len(union)/len(baraja)\n",
-    "adicion = probA + probB - probInterseccion\n",
+    "probUnion = round(len(union)/len(baraja),2)\n",
+    "adicion = round(probA + probB - probInterseccion,2)\n",
     "reglaAdicion = 'si' if probUnion == adicion else 'no'\n",
     "\n",
     "print(f\"P(A ∪ B) = {probUnion}\")\n",
